--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
                 ARIM Messaging Program Change Log
                 ---------------------------------
 
+v1.8  18Apr2018
+---------------
+1. Discontinue use of PTT asynch responses from the ARDOP TNC as an
+   indication of link activity in an idle ARQ connection. This
+   prevents premature time outs when TNC is configured for serial port
+   PTT or CAT radio control.
+2. Don't show placeholder call sign "?????" in calls heard list.
+3. Correct typos in PDF Help file.
+
 v1.7  31Mar2018
 ---------------
 1. Fix latent bug which can cause a segfault when processing
