--- a/arim.1
+++ b/arim.1
@@ -24,6 +24,8 @@ Print the version of arim, and then exit.
 For a detailed description see \fBarim\fR(5)
 .PP
 \fI${HOME}/arim/arim.ini
+.PP
+\fI${HOME}/arim/arim-themes
 .SH AUTHOR
 Robert Cunnings, NW8L <\fInw8l@whitemesa.com\fR>
 .SH COPYRIGHT
