--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,33 @@
                        ARIM Release Notes
 =====================================================================
 
+Version 2.1
+-----------
+* Adapt to changes in ARDOP 2 introduced in ARDOP_2Win version 2.0.4
+  including the ARQ bandwidth negotiation feature.
+* Add new command 'arqnegbw'. Use this to change the NEGOTIATEBW
+  setting on the TNC from the ARIM command prompt. For example:
+     arqnegbw TRUE
+* Add new parameter 'arq-negotiate-bw' to the [tnc] section of the
+  arim.ini configuration file:
+     arq-negotiate-bw = TRUE
+  The value must be TRUE or FALSE. Default: TRUE. ARIM detects the
+  TNC version and doesn't try to set this parameter on the ardop2 or
+  piardop2 TNCs from G8BPQ.
+* Add ARQ bandwidth field to the Connection History view.
+* Adjust to new gcc 8 string format truncation diagnostics. Change
+  'snprintf' destination buffer sizes where needed and explicitly
+  handle certain format truncation cases to satisfy the compiler and
+  prevent warnings.
+* Copy 'test.txt' file from /usr/local/share/arim only when missing
+  from user's local shared files directory.
+* Set LISTEN to FALSE when sending ARQ connection requests.
+* Fix bug where ARQBW value in ARQ "Connecting... ARQBW=XXX" trace
+  was missing when no ARQBW was specified by 'conn' command.
+* Fix bug causing occasional failure to prompt user to save message
+  to outbox when the message send operation is canceled with ESC.
+* Update arim(5) man page, embedded Help and PDF Help doc.
+
 Version 2.0
 -----------
 * Adapt ARIM to ARDOP TNC version 2.
