--- a/arim.5
+++ b/arim.5
@@ -1,5 +1,5 @@
 
-.TH "ARIM" 5 "2018-05-02" "ARIM Messaging Program" "arim"
+.TH "ARIM" 5 "2018-07-22" "ARIM Messaging Program" "arim"
 .SH NAME
 arim - related files
 .SH FILES
@@ -63,6 +63,9 @@ Controls whether or not the TNC responds to pings from other stations. Set to TR
 \fBarq-bandwidth\fR
 Sets the ARQ connection bandwidth. The value must be one of: 200, 500 or 2500. Default is 500.
 arq-timeout The inactivity timeout for ARQ connections in seconds. Range is 30-600. Default: 120.
+.TP
+\fBarq-negotiate-bw\fR
+Controls whether or not the TNC will negotiate ARQ bandwidth for incoming connections. Set to TRUE to enable, FALSE to disable. Default: TRUE.
 .TP
 \fBarq-sendcr\fR
 Controls whether or not CRLF line endings are sent in ARQ mode, instead of Unix style LF endings. Set to TRUE to send CR, FALSE to send only LF. Default: TRUE.
